Added create user endpoint
